Mostly fixed Links, changed Examples page so it isn't an exact clone of Documentation.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<span id="logo"></span>
 			<ul class="fork">
 				<li>
-					<a href="http://aaboyles.com/Tabular.js" class="button"><strong>Home</strong></a>
+					<a href="http://aaboyles.github.io/Tabular.js" class="button"><strong>Home</strong></a>
 				</li>
 				<li>
 					<a href="docs/" class="button"><strong>Documentation</strong></a>
