--- a/examples/index.html
+++ b/examples/index.html
@@ -15,20 +15,20 @@
 	</head>
 	<body>
 		<header>
-			<h1><a href="http://aaboyles.com/Tabular.js" style="color:white;">Tabular.js</a></h1>
+			<h1><a href="http://aaboyles.github.io/Tabular.js" style="color:white;">Tabular.js</a></h1>
 			<p>A small Javascript library for playing with CSVs</p>
 		</header>
 		<div id="banner">
 			<span id="logo"></span>
 			<ul class="fork">
 				<li>
-					<a href="http://aaboyles.com/Tabular.js" class="button"><strong>Home</strong></a>
+					<a href="http://aaboyles.github.io/Tabular.js" class="button"><strong>Home</strong></a>
 				</li>
 				<li>
-					<a class="button"><strong>Documentation</strong></a>
+					<a href="../docs/" class="button"><strong>Documentation</strong></a>
 				</li>
 				<li>
-					<a href="../examples/" class="button"><strong>Examples</strong></a>
+					<a class="button"><strong>Examples</strong></a>
 				</li>
 				<li>
 					<a href="https://github.com/AABoyles/Tabular.js" class="button"><strong>View On GitHub</strong></a>	
@@ -51,7 +51,7 @@
 				<ul></ul>
 			</nav>
 			<section>
-				<h1><a name="tabularjs" class="anchor" href="#tabularjs"><span class="octicon octicon-link"></span></a>Documentation</h1>
+				<h1><a name="tabularjs" class="anchor" href="#tabularjs"><span class="octicon octicon-link"></span></a>Examples</h1>
 
 				<h2><a name="use" class="anchor" href="#use"><span class="octicon octicon-link"></span></a>Basic Usage</h2>
 				<p>To Use Tabular.js, just source the library however you prefer:</p>
@@ -76,39 +76,37 @@ container.innerHTML = tableHTML;
 				<h1><a name="Functions" class="anchor" href="#functions"><span class="octicon octicon-link"></span></a>Functions</h1>
 
 				<h2><a name="table2Array" class="anchor" href="#table2Array"><span class="octicon octicon-link"></span></a>table2Array(table)</h2>
-				<p>Given a table element, return a 2-dimensional array.</p>
+				<p></p>
 
 				<h2><a name="table2Object" class="anchor" href="#table2Object"><span class="octicon octicon-link"></span></a>table2Object(table)</h2>
-				<p>Given a table element, return an array of objects mapping the first row (presumably titles) to the given row's corresponding value.</p>
+				<p></p>
 
 				<h2><a name="table2CSV" class="anchor" href="#table2CSV"><span class="octicon octicon-link"></span></a>table2CSV(table)</h2>
-				<p>Given a table element, returns a CSV String.</p>
+				<p></p>
 
 				<h2><a name="table2CSVURL" class="anchor" href="#table2CSVURL"><span class="octicon octicon-link"></span></a>table2CSVURL(table)</h2>
-				<p>Given a table Element, return a URL-encoded version of the CSV string representation to allow downloading of the data direct from the browser (no server required).</p>
+				<p></p>
 
 				<h2><a name="csv2Table" class="anchor" href="#csv2Table"><span class="octicon octicon-link"></span></a>csv2Table(csv, delim, headers)</h2>
-				<p>Given a CSV string, a delimiter string, and a boolean indicating the presence of headers in the CSV string, return an HTML table string</p>
+				<p></p>
 
 				<h2><a name="csv2Array" class="anchor" href="#csv2Array"><span class="octicon octicon-link"></span></a>csv2Array(csv, delim)</h2>
-				<p><strong>This is NOT Implemented!</strong></p>
-				<p>Given a CSV string and a delimiter string, return a 2 dimensional javascript array.</p>
+				<p></p>
 
 				<h2><a name="csv2Object" class="anchor" href="#csv2Object"><span class="octicon octicon-link"></span></a>csv2Object(csv, delim)</h2>
-				<p><strong>This is NOT Implemented!</strong></p>
-				<p>Given a CSV string and a delimiter string, return a javascript object.</p>
+				<p></p>
 
 				<h1><a name="jQueryFunctions" class="anchor" href="#jqueryfunctions"><span class="octicon octicon-link"></span></a>jQuery Functions</h1>
 				<p>And here's what's currently available with the jQuery Plugin:</p>
 
 				<h2><a name="jQcsv2Table" class="anchor" href="#jQcsv2Table"><span class="octicon octicon-link"></span></a>csv2Table(delim, headers)</h2>
-				<p>Transforms the element upon which it was called into a table.  Assumes it contains CSV-parsable content.</p>
+				<p></p>
 
 				<h2><a name="jQtable2CSV" class="anchor" href="#jQtable2CSV"><span class="octicon octicon-link"></span></a>table2CSV(delim)</h2>
-				<p>Returns an array of each selected tables' CSV-encoded contents</p>
+				<p></p>
 
 				<h2><a name="jQdownloadTable" class="anchor" href="#jQdownloadTable"><span class="octicon octicon-link"></span></a>downloadTable(format, send)</h2>
-				<p>Returns an array of URL-encoded CSV Strings for use in downloadable links</p>
+				<p></p>
 
 			</section>
 			<footer>
